OD-14618 Remove OSX standalone application bundle.